--- a/loginpage.css
+++ b/loginpage.css
@@ -17,8 +17,9 @@
 			background:linear-gradient(to top,
         violet,yellow,blue,red,indigo,green,powderblue,lightgreen) ;
 			border-radius: 10px;
-			display:none;
+			display:block;
 		}
+
 		.login_form{
 			padding: 20px 40px;
 		}
@@ -56,7 +57,7 @@
 			transition-duration: .5s;
 		}
        #submitbtn:hover{
-       	background: #151c61;
+       	background: #2c41e6;
        }
        .login_form #check_uname,
        .login_form #check_pwd{
@@ -83,3 +84,18 @@
        	border-radius: 10px;
        	border: 2px solid #Ef9A9A;
        }
+#button{
+  background-color: #4CAF50;
+  border: 2px solid black;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 20px;
+}
+#button:hover{
+    background-color:red;
+    color:white;
+    border: 2px solid black;
+    }
