--- a/loginpage.css
+++ b/loginpage.css
@@ -10,13 +10,13 @@
 		}
 		.container{
 			position: relative;
-			margin-top: 300px ;
+			margin-top: 100px ;
 			width: 450px;
 			height: 450px;
 			background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgq33d5epMSWknPtYn2cOrarXwP188_L8_yg&usqp=CAU) ;
 			background-repeat: no-repeat;
 			background-size: cover;
-            
+            background: #171713;
 			border-radius: 20px;
 			display:block;
 		}
