--- a/loginpage.css
+++ b/loginpage.css
@@ -1,6 +1,8 @@
 
 		
 		 body{
+                        margin:0;
+                        padding:0;
 			-webkit-print-color-adjust: exact !important;
 			background: white !important;
 			align-items: center;
@@ -115,12 +117,12 @@
 		}
 		 #date_style{
 			font-family: 'Tiro Tamil', serif;
-			background-color: white;
+			background-color: indigo;
+
 			color: black;
 			font-weight: bolder;
 			font-size: 20px;
 			cursor: pointer;
-
 			border-radius: 10px;
 			border: 3px solid red;
 		}
