--- a/loginpage.css
+++ b/loginpage.css
@@ -1,7 +1,7 @@
 
 		
 		 body{
-                        margin:0;
+                        margin:50px 200px 50px;
                         padding:0;
 			-webkit-print-color-adjust: exact !important;
 			background: white !important;
