--- a/loginpage.css
+++ b/loginpage.css
@@ -10,8 +10,8 @@
 		.container{
 			position: absolute;
 			margin: auto;
-			width: 450px;
-			height: 450px;
+			width: auto;
+			height: auto;
             background: #171713;
 			border-radius: 20px;
 			display:block;
