--- a/loginpage.css
+++ b/loginpage.css
@@ -9,7 +9,7 @@
                        transition-duration:4s;
 		}
                body:hover{
-                background: linear-gradient(to top, green,white,black,green,white,black);
+                background-color: linear-gradient(to top, green,white,black,green,white,black);
              }
 		.container{
 			position: absolute;
@@ -23,7 +23,7 @@
                         transition-duration:5s;
 		}
          .container:hover{
-                    box-shadow: 0 0 30px 20px #ded15b;
+                    box-shadow: 0 0 30px 20px red;
 }
 		.login_form{
 
