--- a/loginpage.css
+++ b/loginpage.css
@@ -135,7 +135,7 @@
 		 #date_style{
 			font-family: 'Tiro Tamil', serif;
 			background-color: white;
-                        
+                        text-align:center;
 			color: black;
 			font-weight: bolder;
 			font-size: 20px;
