--- a/loginpage.css
+++ b/loginpage.css
@@ -265,14 +265,14 @@
 		    font-family: 'Arima', cursive !important;
 			font-weight: bolder !important;
 			font-size: 30px !important;
-			text-align: center !important;
+			text-align: left !important;
 			padding: 20px !important;
 		}
 		#date_style{
 			font-family: 'Tiro Tamil', serif;
 			background-color: black !important;
 			color: white !important;
-			text-align: center !important;
+			text-align: left !important;
 			font-weight: bolder;
 			font-size: 30px !important;
 			border: 2px solid black !important;
