--- a/loginpage.css
+++ b/loginpage.css
@@ -6,6 +6,7 @@
 			background: white !important;
 			align-items: center;
 			justify-content: center;
+                        min-width:960px;
        
 		}
           
