--- a/loginpage.css
+++ b/loginpage.css
@@ -13,8 +13,8 @@
 		.container{
 			position: absolute;
 			margin: 400px 300px 100px;
-			width: 455px;
-			height: auto;
+			width: 485px;
+			height: 500px;
                         background: #171713;
 			border-radius: 20px;
 			display:block;
