--- a/loginpage.css
+++ b/loginpage.css
@@ -9,7 +9,22 @@
                        /* min-width:960px;*/
        
 		}
-          
+.bg-image {
+  /* The image used */
+  background-image: url("download.jpg");
+
+  /* Add the blur effect */
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 		.container{
 			position: absolute;
 			margin: 400px 300px 100px;
