--- a/loginpage.css
+++ b/loginpage.css
@@ -11,7 +11,7 @@
 		}
 .bg-image {
   /* The image used */
-  background-image: url("download.jpeg");
+  background: blue;
 
   /* Add the blur effect */
   filter: blur(8px);
