--- a/loginpage.css
+++ b/loginpage.css
@@ -18,7 +18,7 @@
                         background: #171713;
 			border-radius: 20px;
 			display:block;
-			box-shadow: 0 0 30px 20px greenyellow;
+			box-shadow: 0 0 30px 20px green;
                        
 		}
          
