--- a/loginpage.css
+++ b/loginpage.css
@@ -7,6 +7,7 @@
 			align-items: center;
 			justify-content: center;
                        /* min-width:960px;*/
+                         border:10px solid black;
        
 		}
 
