--- a/loginpage.css
+++ b/loginpage.css
@@ -120,7 +120,7 @@
   margin: 10px 20px;
   border-radius: 20px;
 }
-#button:onfocus{
+#button:hover{
     background-color:red;
     color:white;
     border: 2px solid black;
