--- a/loginpage.css
+++ b/loginpage.css
@@ -106,10 +106,10 @@
        	margin-top: 5px;
        	width: auto;
        	font-size: 18px;
-       	color: white;
+       	color: black;
        	font-weight: bold;
        	padding: 10px 8px;
-       	background: #29f013;
+       	background: #24912a;
        	text-align: center;
        	border-radius: 10px;
        	border: 2px solid #1e7d14;
