--- a/loginpage.css
+++ b/loginpage.css
@@ -109,7 +109,7 @@
        	color: black;
        	font-weight: bold;
        	padding: 10px 8px;
-       	background: #24912a;
+       	background:#3ee646;
        	text-align: center;
        	border-radius: 10px;
        	border: 2px solid #1e7d14;
