--- a/loginpage.css
+++ b/loginpage.css
@@ -2,6 +2,7 @@
     text-align:center;
 }
 ::placeholder{
+	 font-family: 'Tiro Tamil', serif;
     color:#196578;
     font-weight:bolder;
 }
@@ -12,6 +13,7 @@
 			background: white !important;
 			align-items: center;
 			justify-content: center;
+
                        /* min-width:960px;*/
                          
        
@@ -36,12 +38,18 @@
 		label{
 			font-size: 30px;
 			margin: 5px 0;
-			color:white;
+			/*color:white;*/
 			font-weight: bold;
-			font-family: arial,sans-serif;
+			font-family: 'Tiro Tamil', serif;
+			background: linear-gradient(to left,#328787,#1bf7f7,#7038f2,#e038f2); 
+    -webkit-background-clip: text; 
+
+    color: transparent;
 
 		}
 		.login_form input{
+			font-family: 'Tiro Tamil', serif;
+			font-weight: bolder;
 			height: 50px;
 			width: 350px;
 			padding: 0 5px;
@@ -67,10 +75,11 @@
 				font-weight: bold;
 				cursor: pointer;
 				/*padding: 10px 5px 20px 5px;*/
-				font-family:arial,sans-serif;
+				font-family: 'Tiro Tamil', serif;
 				background: yellow;
 				border-radius: 25px;
 				border: 2px solid black;
+
 		}
      
         .login_form #check_uname,
@@ -85,8 +94,10 @@
        	border-radius: 7px;
        	border: 1px solid #EF9A9A;
        	display: none;
+
        }
        #check,#session,#offline{
+       	font-family: 'Tiro Tamil', serif;
        	display: none;
        	box-shadow: 0 0 2px 2px red;
        	margin-top: 5px;
@@ -101,20 +112,22 @@
        	border: 2px solid #Ef9A9A;
        }
 #success,#online{
+	    font-family: 'Tiro Tamil', serif;
        	display: none;
        	box-shadow: 0 0 2px 2px #37eb23;
        	margin-top: 5px;
        	width: auto;
        	font-size: 18px;
-       	color: black;
+       	color: white;
        	font-weight: bold;
        	padding: 10px 8px;
-       	background:#3ee646;
+       	background: #29f013;
        	text-align: center;
        	border-radius: 10px;
        	border: 2px solid #1e7d14;
        }
 #button{
+	font-family: 'Arima', cursive;
   background-color: #4CAF50;
   border: 2px solid black;
   color: white;
@@ -228,8 +241,20 @@
 			background-color: #ff1212;
 			border-radius: 15px;
 			border: 2px dashed black;
+			}
+/*#names,#name,input{
+			border: 1px solid white;
+			background-color: white;
+			text-align: left;
+			width: 400px;
+			padding:4px;
+			font-weight: bolder;
+			font-size: 90%;
+		-webkit-appearance: none;
+			cursor: pointer;
+			font-family: 'Tiro Tamil', serif;
+		}*/
 
-		}
 		body{
 			-webkit-print-color-adjust: exact !important;
 		}
